Do not queue up events forever when initialization fails

The FeatureEngagementTracker can end up queueing events up forever
in memory. It will stay there until the browser is killed. This can
happen in two ways: For events that are notified before initialization
is completed, they will stay in memory.

In addition, events that are notified after init has completed (but
failed), they will also be kept in memory.

This CL adds a test that identifies both these scenarios, and also
adds the code to fix the issue.

BUG=736550

Change-Id: I201c97839a9246cbbebf9b866d0131ea42643823
Reviewed-on: https://chromium-review.googlesource.com/546959
Reviewed-by: Xing Liu <xingliu@chromium.org>
Commit-Queue: Tommy Nyquist <nyquist@chromium.org>
Cr-Commit-Position: refs/heads/master@{#482147}
Former-commit-id: dacfd003d4b463152a155266d17c56504cfc6f12